# react-native-awesome-calculator

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  react-native-awesome-calculator.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/awesomecalculator/: AwesomeCalculatorModule.java  AwesomeCalculatorPackage.java
cpp/: react-native-awesome-calculator.cpp  react-native-awesome-calculator.h
cpp/nativecalc/: Cargo.toml  Nativecalc.podspec  build.sh
cpp/nativecalc/src/: lib.rs
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/awesomecalculatorexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/AwesomeCalculatorExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/AwesomeCalculatorExample.xcodeproj/: project.pbxproj
example/ios/AwesomeCalculatorExample.xcodeproj/xcshareddata/xcschemes/: AwesomeCalculatorExample.xcscheme
example/ios/AwesomeCalculatorExample.xcworkspace/: contents.xcworkspacedata
example/ios/AwesomeCalculatorExampleTests/: AwesomeCalculatorExampleTests.m
example/src/: App.tsx
ios/: AwesomeCalculator.h  AwesomeCalculator.mm
src/: NativeAwesomeCalculator.ts  index.tsx
